AC_INIT(src/main.c)

AM_INIT_AUTOMAKE(LinuxDJ, 0.1)
AM_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(GSTREAMER, gstreamer-0.8, have_gstreamer=true, have_gstreamer=false)
if test "x${have_gstreamer}" = "xfalse" ; then
        AC_MSG_ERROR([No GStreamer package information found])
fi
AC_SUBST(GSTREAMER_CFLAGS)
AC_SUBST(GSTREAMER_LIBS)

PKG_CHECK_MODULES(GTK2, gtk+-2.0, have_gtk2=true, have_gtk2=false)
if test "x${have_gtk2}" = "xfalse" ; then
        AC_MSG_ERROR([No GTK+-2.0 package information found])
fi
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)
        

PKG_CHECK_MODULES(FFTW, fftw3, HAVE_FFTW3=yes, HAVE_FFTW3=no)
AC_SUBST(FFTW_CFLAGS)
AC_SUBST(FFTW_LIBS)
AM_CONDITIONAL(HAVE_FFTW, test "x$HAVE_FFTW" = xyes)

AC_CONFIG_FILES([
        Makefile        \
        src/Makefile    \
        test/Makefile   \
        test/mixer/Makefile
])

AC_OUTPUT
